--- a/projects/valorant_stats/notebooks/cleaning.ipynb
+++ b/projects/valorant_stats/notebooks/cleaning.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 109,
       "metadata": {
         "id": "7B4RWNoUdjpJ"
       },
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i_0m5901eCKp",
-        "outputId": "63bc8e70-fe11-45c7-bcba-01bfd27d819c"
+        "outputId": "1822c9e6-eb95-495b-b4b5-06af97508da2"
       },
-      "execution_count": 96,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "fgjIAQpgeTe4"
       },
-      "execution_count": 97,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "oOcWW65oiqMv"
       },
-      "execution_count": 98,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -140,9 +140,9 @@
           "height": 270
         },
         "id": "WIk3o7r7e0Rm",
-        "outputId": "529cea93-6fc9-4444-ae57-af9a4ce6a2ef"
+        "outputId": "2a4b6415-ca7e-4908-bf0e-33dc375fabf2"
       },
-      "execution_count": 99,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-71de727a-1440-4473-9c13-409da30f024c\">\n",
+              "  <div id=\"df-2d466010-e17a-4679-ac5d-afbba94a7eda\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -461,7 +461,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-71de727a-1440-4473-9c13-409da30f024c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d466010-e17a-4679-ac5d-afbba94a7eda')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -512,12 +512,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-71de727a-1440-4473-9c13-409da30f024c button.colab-df-convert');\n",
+              "          document.querySelector('#df-2d466010-e17a-4679-ac5d-afbba94a7eda button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-71de727a-1440-4473-9c13-409da30f024c');\n",
+              "          const element = document.querySelector('#df-2d466010-e17a-4679-ac5d-afbba94a7eda');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -540,7 +540,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 99
+          "execution_count": 113
         }
       ]
     },
@@ -572,9 +572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K8-1Io-UmR2A",
-        "outputId": "0f1e33ee-9758-4f09-c556-3a4719dc1ce3"
+        "outputId": "df734637-bcc0-4ff0-fa95-f6937fba65e5"
       },
-      "execution_count": 100,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,14 +591,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 114
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Antes de tudo resolvemos tirar jogadores que tenham menos de 30 vitórias, para assim evitarmos outliers como jogadores não ativos que acabam apenas jogando poucas partidas e estagnando no elo/ranque obtido, sabendo que para ser um jogador relevante ele acabará tendo muito mais que 30 vitórias, jogando ainda mais o jogo."
+        "Antes de tudo resolvemos tirar jogadores que tenham menos de 20 vitórias, para assim evitarmos outliers como jogadores não ativos que acabam apenas jogando poucas partidas e estagnando no elo/ranque obtido, sabendo que para ser um jogador relevante ele acabará tendo muito mais que 20 vitórias, jogando ainda mais o jogo."
       ],
       "metadata": {
         "id": "zMOzY5-by2Xs"
@@ -607,12 +607,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df = df[df['wins'] > 30]"
+        "df = df[df['wins'] > 20]"
       ],
       "metadata": {
         "id": "sOdfXR-wy10s"
       },
-      "execution_count": 101,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -634,24 +634,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 206
         },
         "id": "5kLuD0Azi8NV",
-        "outputId": "8740a92e-3a68-4fcf-8ff4-d358dd2fecbb"
+        "outputId": "6aa713c9-3361-46bb-c262-3279b4bec7d8"
       },
-      "execution_count": 102,
+      "execution_count": 116,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py:4913: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  errors=errors,\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -679,7 +668,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-adbb9033-5c65-429c-978b-f4771097be06\">\n",
+              "  <div id=\"df-32592f8a-827e-4eab-b521-7513f38b6867\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -816,7 +805,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-adbb9033-5c65-429c-978b-f4771097be06')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32592f8a-827e-4eab-b521-7513f38b6867')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -867,12 +856,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-adbb9033-5c65-429c-978b-f4771097be06 button.colab-df-convert');\n",
+              "          document.querySelector('#df-32592f8a-827e-4eab-b521-7513f38b6867 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-adbb9033-5c65-429c-978b-f4771097be06');\n",
+              "          const element = document.querySelector('#df-32592f8a-827e-4eab-b521-7513f38b6867');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -895,7 +884,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 116
         }
       ]
     },
@@ -929,37 +918,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oyJ_V1WumUsz",
-        "outputId": "98c90f26-9046-49e2-b3c6-efdc017abfcc"
+        "outputId": "33069dc1-1e24-46d5-ca4e-c13a2ffaba35"
       },
-      "execution_count": 103,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 24423 entries, 0 to 85677\n",
+            "Int64Index: 41103 entries, 0 to 85677\n",
             "Data columns (total 16 columns):\n",
             " #   Column            Non-Null Count  Dtype  \n",
             "---  ------            --------------  -----  \n",
-            " 0   name              24423 non-null  object \n",
-            " 1   rating            24423 non-null  object \n",
-            " 2   damage_round      24423 non-null  float64\n",
-            " 3   headshots         24423 non-null  object \n",
-            " 4   headshot_percent  24423 non-null  float64\n",
-            " 5   aces              24423 non-null  int64  \n",
-            " 6   clutches          24423 non-null  int64  \n",
-            " 7   flawless          24423 non-null  int64  \n",
-            " 8   first_bloods      24423 non-null  object \n",
-            " 9   assists           24423 non-null  object \n",
-            " 10  kd_ratio          24423 non-null  float64\n",
-            " 11  kills_round       24423 non-null  float64\n",
-            " 12  score_round       24423 non-null  float64\n",
-            " 13  win_percent       24423 non-null  float64\n",
-            " 14  agent_1           24423 non-null  object \n",
-            " 15  gun1_name         24423 non-null  object \n",
+            " 0   name              41103 non-null  object \n",
+            " 1   rating            41103 non-null  object \n",
+            " 2   damage_round      41103 non-null  float64\n",
+            " 3   headshots         41103 non-null  object \n",
+            " 4   headshot_percent  41103 non-null  float64\n",
+            " 5   aces              41103 non-null  int64  \n",
+            " 6   clutches          41103 non-null  int64  \n",
+            " 7   flawless          41103 non-null  int64  \n",
+            " 8   first_bloods      41103 non-null  object \n",
+            " 9   assists           41103 non-null  object \n",
+            " 10  kd_ratio          41103 non-null  float64\n",
+            " 11  kills_round       41103 non-null  float64\n",
+            " 12  score_round       41103 non-null  float64\n",
+            " 13  win_percent       41103 non-null  float64\n",
+            " 14  agent_1           41103 non-null  object \n",
+            " 15  gun1_name         41103 non-null  object \n",
             "dtypes: float64(6), int64(3), object(7)\n",
-            "memory usage: 3.2+ MB\n"
+            "memory usage: 5.3+ MB\n"
           ]
         }
       ]
@@ -998,37 +987,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mN687t0mlch",
-        "outputId": "101ce733-9a1e-45f0-90ed-7050ca7ef1bd"
+        "outputId": "9a4e5780-0648-4b13-8ea8-9fef63bbcfad"
       },
-      "execution_count": 104,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 24423 entries, 0 to 85677\n",
+            "Int64Index: 41103 entries, 0 to 85677\n",
             "Data columns (total 16 columns):\n",
             " #   Column            Non-Null Count  Dtype  \n",
             "---  ------            --------------  -----  \n",
-            " 0   name              24423 non-null  object \n",
-            " 1   rating            24423 non-null  object \n",
-            " 2   damage_round      24423 non-null  float64\n",
-            " 3   headshots         24423 non-null  object \n",
-            " 4   headshot_percent  24423 non-null  float64\n",
-            " 5   aces              24423 non-null  int64  \n",
-            " 6   clutches          24423 non-null  int64  \n",
-            " 7   flawless          24423 non-null  int64  \n",
-            " 8   first_bloods      24423 non-null  object \n",
-            " 9   assists           24423 non-null  object \n",
-            " 10  kd_ratio          24423 non-null  float64\n",
-            " 11  kills_round       24423 non-null  float64\n",
-            " 12  score_round       24423 non-null  float64\n",
-            " 13  win_percent       24423 non-null  float64\n",
-            " 14  agent_1           24423 non-null  object \n",
-            " 15  gun1_name         24423 non-null  object \n",
+            " 0   name              41103 non-null  object \n",
+            " 1   rating            41103 non-null  object \n",
+            " 2   damage_round      41103 non-null  float64\n",
+            " 3   headshots         41103 non-null  object \n",
+            " 4   headshot_percent  41103 non-null  float64\n",
+            " 5   aces              41103 non-null  int64  \n",
+            " 6   clutches          41103 non-null  int64  \n",
+            " 7   flawless          41103 non-null  int64  \n",
+            " 8   first_bloods      41103 non-null  object \n",
+            " 9   assists           41103 non-null  object \n",
+            " 10  kd_ratio          41103 non-null  float64\n",
+            " 11  kills_round       41103 non-null  float64\n",
+            " 12  score_round       41103 non-null  float64\n",
+            " 13  win_percent       41103 non-null  float64\n",
+            " 14  agent_1           41103 non-null  object \n",
+            " 15  gun1_name         41103 non-null  object \n",
             "dtypes: float64(6), int64(3), object(7)\n",
-            "memory usage: 3.2+ MB\n"
+            "memory usage: 5.3+ MB\n"
           ]
         }
       ]
@@ -1057,37 +1046,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lvhqw_LgnFUr",
-        "outputId": "6b325f50-6832-4a96-f996-c701c68efa44"
+        "outputId": "36e76bb7-92b6-4089-8e1f-baad3b868c60"
       },
-      "execution_count": 105,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Int64Index: 24301 entries, 0 to 85677\n",
+            "Int64Index: 40727 entries, 0 to 85677\n",
             "Data columns (total 16 columns):\n",
             " #   Column            Non-Null Count  Dtype  \n",
             "---  ------            --------------  -----  \n",
-            " 0   name              24301 non-null  object \n",
-            " 1   rating            24301 non-null  object \n",
-            " 2   damage_round      24301 non-null  float64\n",
-            " 3   headshots         24301 non-null  float64\n",
-            " 4   headshot_percent  24301 non-null  float64\n",
-            " 5   aces              24301 non-null  int64  \n",
-            " 6   clutches          24301 non-null  int64  \n",
-            " 7   flawless          24301 non-null  int64  \n",
-            " 8   first_bloods      24301 non-null  float64\n",
-            " 9   assists           24301 non-null  float64\n",
-            " 10  kd_ratio          24301 non-null  float64\n",
-            " 11  kills_round       24301 non-null  float64\n",
-            " 12  score_round       24301 non-null  float64\n",
-            " 13  win_percent       24301 non-null  float64\n",
-            " 14  agent_1           24301 non-null  object \n",
-            " 15  gun1_name         24301 non-null  object \n",
+            " 0   name              40727 non-null  object \n",
+            " 1   rating            40727 non-null  object \n",
+            " 2   damage_round      40727 non-null  float64\n",
+            " 3   headshots         40727 non-null  float64\n",
+            " 4   headshot_percent  40727 non-null  float64\n",
+            " 5   aces              40727 non-null  int64  \n",
+            " 6   clutches          40727 non-null  int64  \n",
+            " 7   flawless          40727 non-null  int64  \n",
+            " 8   first_bloods      40727 non-null  float64\n",
+            " 9   assists           40727 non-null  float64\n",
+            " 10  kd_ratio          40727 non-null  float64\n",
+            " 11  kills_round       40727 non-null  float64\n",
+            " 12  score_round       40727 non-null  float64\n",
+            " 13  win_percent       40727 non-null  float64\n",
+            " 14  agent_1           40727 non-null  object \n",
+            " 15  gun1_name         40727 non-null  object \n",
             "dtypes: float64(9), int64(3), object(4)\n",
-            "memory usage: 3.2+ MB\n"
+            "memory usage: 5.3+ MB\n"
           ]
         }
       ]
@@ -1102,21 +1091,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXR4DORqjIPn",
-        "outputId": "4e501e49-78eb-4614-881f-edd2e793aabb"
+        "outputId": "0a37a32e-be47-4765-9f46-5293413a21fc"
       },
-      "execution_count": 106,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array(['Radiant', 'Immortal 3', 'Immortal 2', 'Immortal 1', 'Diamond 3',\n",
-              "       'Silver 2', 'Platinum 1', 'Gold 3', 'Gold 2', 'Silver 1',\n",
-              "       'Silver 3', 'Bronze 3', 'Platinum 3'], dtype=object)"
+              "       'Gold 1', 'Silver 2', 'Platinum 1', 'Gold 3', 'Gold 2', 'Silver 1',\n",
+              "       'Platinum 2', 'Diamond 1', 'Silver 3', 'Bronze 3', 'Platinum 3'],\n",
+              "      dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 120
         }
       ]
     },
@@ -1146,20 +1136,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bpfs2CbnjaNP",
-        "outputId": "f3d626d8-a738-4855-ea3c-e377bf0554f3"
+        "outputId": "b1cf551a-2ad5-4919-c809-3004cb37aab9"
       },
-      "execution_count": 107,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['Radiant', 'Immortal', 'Diamond', 'Silver', 'Platinum', 'Gold',\n",
+              "array(['Radiant', 'Immortal', 'Diamond', 'Gold', 'Silver', 'Platinum',\n",
               "       'Bronze'], dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 107
+          "execution_count": 121
         }
       ]
     },
@@ -1189,7 +1179,7 @@
       "metadata": {
         "id": "nJ-KfGOgoDoY"
       },
-      "execution_count": 108,
+      "execution_count": 122,
       "outputs": []
     }
   ],
